--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "jTography",
+  "name": "gatsby-starter-prologue",
   "version": "0.0.1",
-  "description": "Jtography Portfolio",
-  "repository": '',
+  "description": "Gatsby.js V2 starter template based on Prologue by HTML5 UP",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-prologue.git"
+  },
   "author": {
-    "name": "grant best",
-    "email": ""
+    "name": "Anubhav Srivastava",
+    "email": "anubhav.srivastava00@gmail.com"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -28,11 +31,11 @@
   },
   "scripts": {
     "develop": "gatsby develop",
-    "build": "gatsby build",
-    "deploy": "gatsby build",
+    "build": "npm run clean && gatsby build",
+    "deploy": "npm run clean && gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "clean": "rimraf .cache public",
+    "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
