--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "gatsby": "^2.4.3",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-netlify": "^2.1.35",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
