--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "J",
+  "name": "",
   "version": "0.0.1",
   "description": "Jtography Portfolio",
   "repository": {
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "gatsby": "^2.19.45",
-    "gatsby-plugin-manifest": "^2.2.48",
+    "gatsby": "^2.4.3",
+    "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-netlify": "^2.1.35",
     "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.1.24",
-    "gatsby-plugin-sass": "^2.1.31",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
     "node-sass": "^4.12.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-reveal": "^1.2.2",
@@ -28,18 +28,16 @@
     "react-tilt": "^0.1.4",
     "react-visibility-sensor": "^5.1.1",
     "smoothscroll-polyfill": "^0.4.4",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.0"
   },
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\""
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
     "prettier": "^1.17.0",
     "rimraf": "^2.7.1"
   },
