--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
     "email": "anubhav.srivastava00@gmail.com"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "gatsby": "^2.4.3",
-    "gatsby-plugin-manifest": "^2.3.2",
-    "gatsby-plugin-netlify": "^2.1.35",
+    "acorn": "^6.4.1",
+    "core-js": "^3.6.5",
+    "firebase": "^7.14.5",
+    "gatsby": "^2.22.6",
+    "gatsby-plugin-manifest": "^2.4.8",
+    "gatsby-plugin-netlify": "^2.3.3",
     "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-sass": "^2.3.2",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-cool-img": "^1.1.6",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.9.0",
+    "react-icons": "^3.10.0",
+    "react-refresh": "^0.8.3",
     "react-reveal": "^1.2.2",
     "react-scrollspy": "^3.4.0",
     "react-tilt": "^0.1.4",
     "react-visibility-sensor": "^5.1.1",
     "smoothscroll-polyfill": "^0.4.4",
-    "typescript": "^3.8.3",
-    "uuid": "^7.0.0"
+    "typescript": "^3.9.3",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "develop": "gatsby develop",
