--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "acorn": "^6.4.1",
     "core-js": "^3.6.5",
-    "firebase": "^7.14.5",
-    "gatsby": "^2.22.6",
+    "firebase": "^7.24.0",
+    "framer-motion": "^2.9.4",
+    "gatsby": "^2.24.85",
     "gatsby-plugin-manifest": "^2.4.8",
     "gatsby-plugin-netlify": "^2.3.3",
     "gatsby-plugin-offline": "^2.1.0",
@@ -25,6 +26,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.10.0",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-refresh": "^0.8.3",
     "react-reveal": "^1.2.2",
     "react-scrollspy": "^3.4.0",
